--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,11 +21,11 @@ repos:
     hooks:
     -   id: pylint
 -   repo: https://github.com/pre-commit/pygrep-hooks
-    rev: ''
+    rev: 'v1.9.0'
     hooks:
     -   id: python-no-eval
     -   id: python-use-type-annotations
 -   repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: ''
+    rev: 'v1.1.10'
     hooks:
     -   id: forbid-tabs
